--- a/css/style.css
+++ b/css/style.css
@@ -108,13 +108,15 @@ nav{
     width: 20px;
     height: 20px;
 }
+#fonction-recherche{
+    width: 40%;
+}
 .search{
     display: flex;
     align-items: center;
     flex-direction: row;
     padding: 0px;
     gap: 24px;
-    width: 100%;
     height: 49px;
     background: white;
     border: 1px solid #F2F2F2;
@@ -127,10 +129,11 @@ nav{
    font-weight: 700;
    font-size: 16px;
    line-height: 21px;
-   text-align: center;
+   text-align: left;
    border: none;
-   color: #000;
-   opacity: 1;
+}
+input::placeholder{
+    opacity: 1;
 }
 .searchbutton-desktop{
     width: 33%;
@@ -459,8 +462,10 @@ nav{
    #info-group{
     margin-left: 20px;
    }
+   #fonction-recherche{
+    width: 85%;
+   }
   .search{
-    width: 335px;
     height: 50px;
     border-radius:15px 25px 25px 15px;
   }
@@ -469,6 +474,7 @@ nav{
   }
   .typebar{
     width: 68%;
+    position: relative;
   }
   #search-mobile{
     display: flex;
