--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ input::placeholder{
     font-weight: 700;
     font-size: 16px;
     line-height: 21px;
+    cursor: pointer;
 }
 .search-mobile{
     display: none;
@@ -178,6 +179,7 @@ input::placeholder{
     padding: 4px 19px;
     height: 50px;
     box-sizing: border-box;
+    cursor: pointer;
 }
 .filters-icons{
     color: #0065FC;
@@ -186,6 +188,7 @@ input::placeholder{
 
 .filters-list:hover{
     background-color: #DEEBFF;
+    /* transform: scale(1.25); */
 }
 
 /* information */
@@ -489,6 +492,7 @@ input::placeholder{
     color: #ffffff;
     border-radius: 15px 15px 15px 15px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
   }
    .filters{
     display: flex;
@@ -498,6 +502,7 @@ input::placeholder{
   }
    .filters-list{
     width: 47%;
+    font-size: 12px;
   }
    .filter-bar{
     margin-top: 0;
@@ -540,7 +545,9 @@ input::placeholder{
    .hebergements-cards{
     display: flex;
     flex-direction: column;
-    width: 335%;
+}
+.h-card{
+    width: 100%;
 }
    #activites-marseille{
     height: 930px;
