--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,7 @@ input::placeholder{
 @media (max-width: 767.98px) {
     body{
     margin: 0;
+    overflow-x: hidden;
    }
    .main-container{
       padding: 0;
